Fix : 최종 SQL 파일 생성 코드 작성